# myfempy

./: .gitignore  .readthedocs.yaml  CITATION.cff  FILE_TEST  MANIFEST.in  Makefile  README.md  citing.bib  install.py  installer.py  mkdocs.yml  modules.rst  myfempy_perf_test_profile.py.lprof  pyproject.toml  requirements.txt  setup.py  setup_cython_wrap.py  setup_wrap_cy_pyx.py  sonar-project.properties  static_linear_tests.py.lprof  test_pyVista.py  tox.ini  tree_path.txt  version.py
.circleci/: config.yml
.github/workflows/: build.yml  check-version-numbers.yml  pipeline.yml  run-tests.yml
bench/backup/: beam_solution_v11.py  beam_test01.py  inputdata.txt  plane_solution_v13.py
bench/beam/: beam_mode_shape_0.4425_Hz_1.vtk  beam_mode_shape_4.0139_Hz_4.vtk  myfempy_input_cfg.txt
bench/beam2/: beam_mode_shape_0.1555_Hz_1.vtk  beam_mode_shape_0.1668_Hz_2.vtk  beam_mode_shape_1783.9496_Hz_2.vtk  beam_usr_geo.geo  beam_usr_mesh.msh1  myfempy_input_cfg - Copia.txt
bench/frame/: frame_mesh_view.vtk  frame_mode_shape_15.7142_Hz_1.vtk  frame_usr_mesh.msh1
bench/mola/: beam_mesh_view.vtk  beam_usr_mesh.msh1  mola_mode_shape_0.5825_Hz_0.vtk  mola_mode_shape_1.5915_Hz_1.vtk  mola_mode_shape_2.2508_Hz_0.vtk  mola_usr_mesh.msh1  myfempy_input_cfg.txt
bench/plane/: plane_displacement_0.vtk  plane_displacement_2.vtk  plane_displacement_3.vtk  plane_stress_vm_0.vtk  plane_stress_vm_3.vtk  plane_stress_vm_avr_1.vtk  plane_stress_vm_avr_3.vtk  plane_usr_geo.geo
bench/plate/: myfempy_input_cfg.txt  palte_mesh_view.vtk  plate_usr_geo.geo
bench/rod/: myfempy_input_cfg.txt  rod_usr_geo.geo
bench/solid/: solid_mesh_view.vtk  solid_mode_shape_0.0849_Hz_0.vtk  solid_usr_mesh.msh1
bench/truss/: myfempy_input_cfg.txt  truss_displacement_0.vtk  truss_stress_flexural_0.vtk  truss_usr_geo.geo
doc/: conf.py  documentation.md  documentation.rst  examples.rst  index.md  index.rst  inputs.rst  installation.rst  introduction.rst  modules.rst  myfempy.io.rst  myfempy.md  myfempy.plots.rst  myfempy.rst  opt_inputs.txt  opt_variable.txt  tutorial.rst
doc/latex/: myfempy.aux  myfempy.idx  myfempy.out  myfempy.tex  myfempy.toc
docs/: about.md  conf.py  contribution.md  development.md  documentation.md  examples.md  gallery.md  history.md  index.md  index.rst  inputs.md  installation.md  introduction.md  myfempy.md  requirements.txt  theory.md  tutorial.md  user_guide.md  user_manual.md
docs/api/: index.html  search.js
docs/manual_dev/: capa_v1.eps  logoNome2_svg.eps  myfempy_manual_users.aux  myfempy_manual_users.bbl  myfempy_manual_users.blg  myfempy_manual_users.tex  myfempy_manual_users.toc  myfempy_manual_users.xwm
docs/rtd_webpage/: conf.py  examples.rst  index.rst  introduction.rst  sphinx_compiler.txt  users_guide.rst
docs/tutoriais/: index.txt
examples/: Elasticity_Case.py  MultiScale_PlaneStress.py  MultiScale_PlaneStress_Core_HoneyComb.py  README.md  coup_struct_heat_StSd.py  cyclic_symmetric.py  cyclic_symmetric_plane.py  ex_first_test.py  ex_su2_Linear Elasticity_Case.py  heat_StSd.py  homogenization_bench_Guedes1989_square_checkboard_mesh_gmsh.py  homogenization_bench_Hassani1998_model1_mesh_gmsh.py  homogenization_bench_Hassani1998_model1_square_hole_mesh_gmsh.py  honeycomb_propmat.py  honeycomb_propmat_PER.py  linear_static_planestress_case.py  myfempyVSsu2_StaticLinear.py  myfempy_multi_escala_Al_core_square_hole.py  myfempy_nafems_le1.py  patchtest_quad4.py  phononic_crystal_sigmund_2003_solid_plane.py  phononic_crystal_sigmund_2003_square_hole.py  run_first_test.py  sim_tira_bimetalica.py  static_linear_beam.py  static_linear_beam3d_LoganBook.py  stress_concentration.py  tapered_bar.py  test_t3.py  tuning_fork.STEP  tuning_fork.py  vibration_beam.py  vibration_frf.py  vibration_modal.py  vibration_plane.py  vibration_solid.py
ghosts_files/: .$myfempy_ project_draft.drawio.bkp  .$myfempy_class_design.drawio.bkp  .$myfempy_class_design.drawio.dtmp  .$myfempy_class_map.drawio.bkp  .$myfempy_class_map.drawio.dtmp  .$myfempy_flowcharts.drawio.bkp  .$obj_map_myfempy.drawio.bkp  .$obj_map_myfempy.drawio.dtmp  about.txt  an encyclopedia of finite element definitions.txt  blackbox.txt  comm.txt  examples_headers.txt  input.txt  inputs_bkp.txt  issues.txt  markdown_basic.txt  myfempy_ project_draft.drawio  myfempy_class_map.drawio  myfempy_features_list.ods  myfempy_implementacoes.odt  syntax_proceeding.txt  terminal_logos.txt  variables.txt
ghosts_files/doc_from_sphinx/: conf.py  documentation.rst  installation.rst  myfempy.core.rst  myfempy.felib.rst  myfempy.postprc.rst  myfempy.rst
installers/: mfpy_LinuxInstaller_1-0-0.rar
myfempy/: __about__.py  __init__.py  __main__.py  version.py
myfempy/api/: main.py  model.py  physics.py  results.py
myfempy/assets/: logo.txt  utils.py
myfempy/core/: __init__.py  alglin.py  assembler.py  harmonicforced.py  mesh.py  modallinear.py  solver.py  solverset.py  staticlinear.py  util_cy.pyx  utilities.py  utils.py  vibralinear.py
myfempy/expe/: utilities.c
myfempy/experimental/: utilities.html  utilities.pyx
myfempy/felib/: beamre.py  crossec.py  felemset.py  integrat.py  material.py  materset.py  physicset.py  platere.py  postproc.py  quadrature.py  solidre.py
myfempy/help/: aboutEN.txt  aboutPT.txt  help.html  help.py  input.txt  paths.txt  printlogo.txt  vars.txt
myfempy/io/: controllers.py  filters.py  iocsv.py  ioctrl.py  iogmsh.py  iomsh.py  iovtk.py  iovtk_old.py  miscel.py  path.py  solvelog.txt
myfempy/mesh/: __init__.py  genmesh.py  gmsh - Copia.py  gmsh.py  legacy.py  meshgen.py
myfempy/misc/: utils.py
myfempy/plots/: __init__.py  meshquality.py  physics.py  plotmesh.py  plotxy.py  postplot.py  prevplot.py
myfempy/postprc/: __init__.py  average.py  displcalc.py  postcomp.py  postset.py
myfempy/setup/: fea.py  feaanalysis.py  model.py  physics.py  results.py
myfempy/solver/: assembly.py  bcloads.py  plotter.py  setups.py  static.py  vibra.py
myfempy/tools/: path.py  tools.py
myfempy/utils/: about (2).txt  (+7 more)
tests/: test_import.py  test_myfempy.py  test_plane31.py  test_triagular_mesh.py
(+1590 files in other folders)
