#==========================================================================#
#  This Python file is part of myfempy project                             #
#                                                                          #
#  The code is written by A. V. G. Campos                                  #
#                                                                          #
#  A github repository, with the most up to date version of the code,      #
#  can be found here:                                                      #
#     https://github.com/easycae-3d/myfempy                                #
#                                                                          #
#  The code is open source and intended for educational and scientific     #
#  purposes only. If you use myfempy in your research, the developers      #
#  would be grateful if you could cite this.                               #  
#                                                                          #
#  Disclaimer:                                                             #
#  The authors reserve all rights but do not guarantee that the code is    #
#  free from errors. Furthermore, the authors shall not be liable in any   #
#  event caused by the use of the program.                                 #
#==========================================================================#

#==========================================================================#
#                                __                                
#             _ __ ___   _   _  / _|  ___  _ __ ___   _ __   _   _ 
#            | '_ ` _ \ | | | || |_  / _ \| '_ ` _ \ | '_ \ | | | |
#            | | | | | || |_| ||  _||  __/| | | | | || |_) || |_| |
#            |_| |_| |_| \__, ||_|   \___||_| |_| |_|| .__/  \__, |
#                        |___/                       |_|     |___/ 
#
#~~~         myfempy -- MultiphYsics Finite Element Method with PYthon    ~~~
#~~~                     COMPUTATIONAL ANALYSIS PROGRAM                   ~~~
#~~~             Copyright (C) 2022 Antonio Vinicius Garcia Campos        ~~~
#==========================================================================#
#                            myfempy install script
#
#                  Install myfempy through `python install .`,
#                or visit the github page to more information

[project]
name = "myfempy"
description = "Myfempy is a python package based on finite element method to multiphysics analysis."
authors = [
    {name = "Antonio Campos", email = "antviniciuscampos@gmail.com"},
]
readme = "README.md"
dynamic = ["version"]
license = {file = "LICENSE.md"}
requires-python = ">3.8"
dependencies = [
	"numpy",
	"scipy",
	"cython",
	"gmsh",
	"vedo",
	"matplotlib",
	"colorama",
	"numdifftools",
	"jax[cpu]",
]
keywords = ["FEM", "FEA", "FSI", "Engineering"]

classifiers = [
  "Development Status :: Alpha",
  "Researchers :: Mechanical Engineers :: Students",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GPL-3 License",
  "Programming Language :: Python :: 3.8",
]

[project.urls]
Documentation = "myfempy.readthedocs.io/en/latest/"
Repository = "https://github.com/avgcampos/myfempy/releases"