#                                __                                
#             _ __ ___   _   _  / _|  ___  _ __ ___   _ __   _   _ 
#            | '_ ` _ \ | | | || |_  / _ \| '_ ` _ \ | '_ \ | | | |
#            | | | | | || |_| ||  _||  __/| | | | | || |_) || |_| |
#            |_| |_| |_| \__, ||_|   \___||_| |_| |_|| .__/  \__, |
#                        |___/                       |_|     |___/ 
#
#~~~         myfempy -- MultiphYsics Finite Element Module with PYthon    ~~~
#~~~                     COMPUTATIONAL ANALYSIS PROGRAM                   ~~~
#~~~             Copyright (C) 2025 Antonio Vinicius Garcia Campos        ~~~
#============================================================================
# myfempy install script:
# Install myfempy through `>> python install .`,
# or visit the github page to more information

[project]
name = "myfempy"
description = "A Python library based on finite element method to multiphysics analysis"
authors = [
    {name = "Antonio Vinicius Garcia Campos"},
]
readme = "README.md"
version = "0.9.0"
license = {file = "LICENSE.md"}
requires-python = ">= 3.8"
dependencies = [
	"numpy == 1.26.4",
	"scipy == 1.13.1",
	"cython == 3.0.10",
	"gmsh == 4.13.1",
	"vedo == 2024.5.2",
	"matplotlib == 3.9.0",
	"art == 6.2",
]
keywords = ["FEM", "FEA", "FSI", "Engineering"]

classifiers = [
  "Development Status :: Alpha",
  "Researchers :: Mechanical Engineers :: Students",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GPL-3 License",
  "Programming Language :: Python :: 3.8",
]

[project.urls]
Homepage = "https://github.com/avgcampos/myfempy"
Documentation = "https://myfempy.readthedocs.io/en/latest/"
Changelog = "https://github.com/avgcampos/myfempy/releases"
Discussions = "https://github.com/avgcampos/myfempy/discussions"

### Cython Compiler
[build-system]
requires = ["setuptools", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["setup_wrap_cy_pyx"]
package-dir = {"" = "."}

[tool.setuptools.packages]
find = {}

[tool.setuptools.cmdclass]
build_ext = "setup_wrap_cy_pyx.build_ext"
